# oneTTB-visualizer

./: .editorconfig  CMakeLists.txt  README.md  oneTBB-visualizer.sln
Core/: CMakeLists.txt  Core.cpp  GUIDGenerator.cpp  GUIUpdater.cpp  Node.cpp
GUI/: App.axaml  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ViewLocator.cs
GUI/Properties/: launchSettings.json
GUI/Views/: MainWindow.axaml
